# scrytext

./: .dockerignore  .env.example  .gitignore  .grype.yaml  .trivy.yaml  API_REFERENCE.md  CHANGELOG.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFRASTRUCTURE_SUMMARY.md  DOCKER_COMPOSE_SUCCESS.md  Dockerfile  ENHANCED_RESILIENCE_SUMMARY.md  LICENSE  MONITORING.md  OPERATIONAL_HARDENING.md  OPERATIONAL_HARDENING_SUMMARY.md  PDF_ADAPTER_SUMMARY.md  PERFORMANCE.md  README.md  RETRY_CIRCUIT_BREAKER_CONFIG.md  RUNUP_COMPLETE.md  RUNUP_COMPLETE_OLD.md  RUNUP_SUMMARY.txt  RUNUP_TASKS_COMPLETE.md  WORD_ADAPTER_DOC_ONLY_REVISION.md  WORD_ADAPTER_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yaml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  ops-nightly.yml  regression.yml  release.yaml  release.yml
alembic/: env.py
config/: adapters.yaml  csv_adapter.yaml  excel_adapter.yaml  json_adapter.yaml  pdf_adapter.yaml  rest_adapter.yaml  settings.base.yaml  settings.development.yaml  settings.production.yaml  soup_adapter.yaml  word_adapter.yaml
grafana/: README.md
grafana/alerts/: scry_ingestor_alerts.yml
scripts/: check_module_coverage.py  security-scan.sh  version.sh
scry_ingestor/: __init__.py  exceptions.py
security-reports/: grype-latest.json  sbom-latest.json  scout-report-20251005_223213.sarif  scout-report-20251005_234918.sarif  trivy-latest.json
terraform/: main.tf  variables.tf
tests/: conftest.py  test_settings.py
(+112 files in other folders)
