[tool.poetry]
name = "scry-ingestor"
version = "0.1.0"
description = "Data ingestion service that collects, processes, and standardizes data from diverse sources"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "scry_ingestor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
celery = "^5.3.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
boto3 = "^1.29.0"
kafka-python = "^2.0.2"
redis = "^5.0.0"
python-docx = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scry_ingestor --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
